--- a/src/index.css
+++ b/src/index.css
@@ -11,20 +11,30 @@
 
 a {
   font-weight: 500;
-  /* text-decoration: inherit; */
+  text-decoration: inherit;
 	text-decoration: none;
 	color: inherit;
   color: whitesmoke;
 	width: 120px;
 }
 
-
-body {
-  margin: 0;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+a:hover {
+  color: whitesmoke;
 }
+
+html {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+  }
+  
+  body {
+	margin: 0;
+	place-items: center;
+	min-width: 320px;
+	min-height: 100vh;
+  }
+
 
 h1 {
   font-size: 3em;
@@ -33,4 +43,10 @@ h1 {
 
 .current-screen {
   display: flex;
+}
+
+@media screen and (max-width:768px) {
+  .current-screen {
+    display: block;
+  }
 }
