--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -1,12 +1,16 @@
 .skills-content {
 	text-align: center;
+	margin: 10% 20%;
+	min-width: 100vh;
 }
 
 .skill-icons {
 	display: flex;
-	flex-wrap: wrap;
+	padding-top: 10%;
+	/* flex-wrap: wrap; */
 }
 
 .skill-logo {
 	width: 15vh;
+	padding-left: 20%;
 }
