--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -2,6 +2,8 @@
 	text-align: center;
 	margin: 10% 20%;
 	min-width: 100vh;
+	animation: fadeInAnimation ease 0.5s;
+    animation-iteration-count: 1;
 }
 
 .skill-icons {
