--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  --orange-theme: rgb(255,69,0);
+  --orange-theme: blue;
 }
 
 a {
