--- a/src/components/SS-navbar/navbar-small.css
+++ b/src/components/SS-navbar/navbar-small.css
@@ -4,4 +4,64 @@
 	top: 0;
 	width: 100%;
 	display: flex;
+	padding: 2%;
 }
+
+.resume {
+	font-size: 1rem;
+}
+
+nav {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px 20px;
+  }
+  
+  .toggle-nav {
+	display: none;
+	cursor: pointer;
+  }
+  
+  ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	display: flex;
+  }
+  
+  li {
+	margin: 0 10px;
+  }
+  
+  a {
+	color: #fff;
+	text-decoration: none;
+  }
+  
+  @media (max-width: 767px) {
+	.toggle-nav {
+	  display: block;
+	}
+	
+	nav ul {
+	  display: none;
+	  flex-direction: column;
+	  align-items: center;
+	  width: 100%;
+	  position: absolute;
+	  top: 60px;
+	  left: 0;
+	  background-color: #333;
+	}
+	
+	nav ul.active {
+	  display: flex;
+	}
+	
+	li {
+	  margin: 10px 0;
+	  width: 100%;
+	}
+  }
