--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -5,8 +5,6 @@
 	margin: 0;
 }
 
-
-
 .c-bg {
 	position: absolute;
 	height: 100vh;
@@ -162,7 +160,10 @@ form {
 }
 
   @media screen and (max-width: 700px) {
-
+	.c-desc-sm {
+		text-align: center;
+		margin-top: 10%;
+	}
 
 	.c-info {
 		display: flex;
