--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+html {
+	/* box-sizing: border-box; */
+	scroll-behaviour: smooth;
+}
+
+body {
+	width: 100%;
+}
+
 .general {
 	transition: 1s ease;
 }
