--- a/src/components/SS-navbar/navbar-small.css
+++ b/src/components/SS-navbar/navbar-small.css
@@ -61,7 +61,7 @@ a {
   }
 
   nav ul {
-    /* display: none; */
+    display: none;
     flex-direction: column;
     align-items: center;
 	text-align: center;
