--- a/src/components/SS-navbar/navbar-small.css
+++ b/src/components/SS-navbar/navbar-small.css
@@ -1,83 +1,60 @@
-.overall {
-  background-color: red;
+nav {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #041D56;
   position: absolute;
   top: 0;
   width: 100%;
   display: flex;
   padding: 2%;
+  justify-content: space-between;
 }
 
-.logo {
-	margin-right: 30%;
-}
-
-.nav-btn {
-	display: flex;
-	/* justify-content: space-between; */
-}
-.nav-btn a {
-	padding: 0;
-	margin-right: 25%;
+.nav-btns {
+  display: flex;
+  margin-right: 18vw;
 }
 
 .resume {
   font-size: 1rem;
-  /* margin-right: 20px; */
-}
-
-nav {
-  width: 100%;
-  display: flex;
-  /* justify-content: space-between; */
-  align-items: center;
-  padding: 10px 20px;
+  white-space: nowrap;
 }
 
 .toggle-nav {
-  display: none;
   cursor: pointer;
   font-size: 1.5rem;
+  margin-left: 5vw;
+  padding: 0 5%;
+  color: white;
 }
+
 
 ul {
   list-style: none;
   margin: 0;
   padding: 0;
+
+}
+
+nav ul {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  position: absolute;
+  top: 60px;
+  left: 0;
+  background-color: #333;
+}
+
+nav ul.active {
   display: flex;
 }
 
 li {
-  margin: 0 10px;
-}
-
-a {
-  color: #fff;
-  text-decoration: none;
-}
-
-@media (max-width: 767px) {
-  .toggle-nav {
-    display: block;
-  }
-
-  nav ul {
-    display: none;
-    flex-direction: column;
-    align-items: center;
-	text-align: center;
-    width: 100%;
-    position: absolute;
-    top: 60px;
-    left: 0;
-    background-color: #333;
-  }
-
-  nav ul.active {
-    display: flex;
-  }
-
-  li {
-    margin: 10px 0;
-    width: 100%;
-  }
+  margin: 10px 0;
+  width: 100%;
 }
