--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -1,10 +1,7 @@
 .skills-content {
 	text-align: center;
-	flex-direction: column;
-	padding-top: 10%;
-	align-items: center;
-	justify-content: center;
-	/* min-width: 100vh; */
+	padding-top: 5rem;
+	left: 30%;
 	animation: fadeInAnimation ease 0.5s;
     animation-iteration-count: 1;
 }
@@ -19,7 +16,6 @@ hr {
 	padding: 0.5rem;
 	border-radius: 20px;
 	background: linear-gradient(315deg, #3c3838, #322f2f);
-
 }
 
 .skill-box:hover {
@@ -37,7 +33,7 @@ hr {
 }
 
 .skill-logo {
-	width: 15vh;
+	width: 5rem;
 }
 
 .logo-name {
@@ -45,9 +41,18 @@ hr {
 	color: #fff;
 }
 
+
+@media screen and (max-width: 755px) {
+	.skill-icons {
+		flex-wrap: wrap;
+	}
+}
+
+
+
 @media screen and (max-width: 750px) {
 	.skill-icons {
-		max-width: 710PX;
+		max-width: 710px;
 		overflow: hidden;
 	}
 }
