--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 html {
-	/* box-sizing: border-box; */
 	scroll-behaviour: smooth;
 }
 
 body {
 	width: 100%;
+	height: 100%;
 }
 
 .general {
@@ -16,7 +16,6 @@ body {
 }
 
 .copy-right {
-	margin: 0;
 	text-align: center;
 }
 
@@ -32,5 +31,6 @@ body {
 
 	.small-screen {
 		display: block;
+		margin-bottom: 0;
 	}
 }
