--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -8,7 +8,7 @@
 }
 
 .i-left {
-  flex: 0.5;
+  flex: .5;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -134,7 +134,7 @@
   }
 
   .i-left-wrapper {
-    /* padding: 15px; */
+    padding: 2rem 0;
     align-items: center;
     justify-content: center;
     height: 100%;
