--- a/src/components/myServices/services.css
+++ b/src/components/myServices/services.css
@@ -8,7 +8,7 @@
 
 #services h1 {
 	font-weight: 700;
-	font-family: cursive;
+	font-family: 'mosk', cursive;
 }
 
 .s-cont {
@@ -16,6 +16,10 @@
 	margin-top: 10vh;
 	justify-content: space-around;
 }
+
+/* .s-cont p {
+	color: rgb(156 163 175/1);
+} */
 
 .s-item {
 	box-shadow: 2px 2px 2px #434445;
@@ -34,7 +38,6 @@
 .s-item-head {
 	font-weight: bold;
 	white-space: nowrap;
-	letter-spacing: -.05em;
 	text-transform: capitalize;
 	font-family: 'Mali', cursive, 'Rubik Vinyl';
 }
@@ -60,7 +63,7 @@
 
 @media screen and (max-width: 600px) {
 	.s-item-head {
-		font-weight: bold;
+		/* font-weight: 900; */
 		white-space: normal;
 		}
 }
