--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@ html {
 
 body {
 	width: 100%;
-	height: 100%;
 }
 
 .general {
@@ -16,6 +15,8 @@ body {
 }
 
 .copy-right {
+	margin: 0;
+	padding: 5px;
 	text-align: center;
 }
 
