--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,5 +1,5 @@
 .about {
-	padding: 15% 3%;
+	padding: 10% 3%;
 
 	animation: fadeInAnimation ease 1.5s;
     animation-iteration-count: 1;
@@ -23,6 +23,9 @@
 }
 
 @media screen and (max-width: 650px) {
+	.about {
+		padding-top: 15%;
+	}
 	.about-me {
 		text-align: center;
 	}
