--- a/src/components/workList/worklist.css
+++ b/src/components/workList/worklist.css
@@ -3,7 +3,6 @@
 	flex-direction: column;
 	align-items: center;
 	text-align: center;
-	padding-top: 10%;
 }
 
 .pl-text {
@@ -33,6 +32,11 @@
 }
 
 @media screen and (max-width: 768px) {
+	.pl {
+		padding-top: 10%;
+
+	}
+	
 	.pl-text {
 		font-size: 13px;
 	}
